# localpay

./: .env  .gitignore  docker-compose.yml
localPay/: .env  .isort.cfg  Dockerfile  alembic.ini  config.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt
localPay/alembic/: env.py
localPay/alembic/versions/: 1226e8f89b02_bigint_float_in_payment_model.py  2a1b403658c3_one_more_fix.py  2a2cc1062a11_one_more_fix_2.py  2e9621bb3ceb_one_more_fix_3.py  34c3357a0cb6_add_planup_id_field_to_user.py  3ddec0136fb5_add_to_spent_balance_to_add_to_spent_.py  518654c372b2_add_refresh_tokens_table_fixed.py  61e665deec6b_one_more_fix_4.py  8c08fbac4d83_advanced_initial_migration.py  8cd2a455dff2_add_refresh_tokens_table.py  cb402f6f1257_add_new_role.py  fa181744fc00_old_spent_balance_to_old_spent_money.py  ff8b1869f567_type_pay_to_payment_type_new_spent_.py
localPay/auth/: auth_service.py  check_permissions.py
localPay/crud/: comment_service.py  payment_service.py  user_service.py
localPay/db/: database.py  init_db.sql
localPay/db/scripts/: comments.py  payments.py  users.py
localPay/exceptions/: error_handlers.py  exceptions.py
localPay/logs/auth_service/: error.log.2024-07-12  error.log.2024-07-19  error.log.2024-07-22  error.log.2024-07-23  (+10 more)
localPay/models/: comment.py  payment.py  refresh_token.py  user.py
localPay/routers/: auth_router.py  comment_router.py  payment_router.py  user_router.py
localPay/schemas/: comment.py  payment.py  token.py  user.py
localPay/tests/: conftest.py  test_change_password.py
localPay/utils/: utils.py
src/: .env  (+7 more)
(+97 files in other folders)
